added rendom string

--- a/notebook/150324.ipynb
+++ b/notebook/150324.ipynb
@@ -21,8 +21,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from torch.autograd import Variable\n",
-        "from torchvision import datasets\n",
-        "iudgimxihcqu \n"
+        "from torchvision import datasets\n"
       ]
     },
     {
